fix: atualiza cores do menu para melhorar a legibilidade

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ ul.menu {
 }
 
 ul.menu li a {
-  color: #e5e900;
+  color: #ffffff;
 
   text-decoration: none;
 }
